fixtures/frontend/milestone-2/invalid/pipe-case-guard-non-exhaustive/main.aivi
fun broken:Text #value:Option Int =>
    value
     ||> Some x when x > 10 => "large"
     ||> None => "empty"
